bug: Prevent break inside sector detail badges

--- a/src/app/save-game-editor/components/sector-preview.scss
+++ b/src/app/save-game-editor/components/sector-preview.scss
@@ -22,6 +22,7 @@ wf-save-game-editor-sector-preview {
 			font-size: 0.8em;
 			margin: 2px;
 			box-shadow: 1px 0px 0px black;
+			white-space: nowrap;
 		}
 	}
 }
